fixed alignment

--- a/src/css/story/story.styl
+++ b/src/css/story/story.styl
@@ -44,6 +44,7 @@ body
                 margin-left 4rem
                 width 30%
                 .g-anno 
+                    overflow hidden
                     opacity 0.3
                     &.in-focus 
                         opacity 1
@@ -92,7 +93,9 @@ body
             
             // max-width 700px
             +mq('bp-5')
+                min-width 70%
                 width 70%
+                max-width 70%
                 grid-template-columns repeat(3, 1fr)
 
             // grid-row-gap 205px
